[gd_scene load_steps=13 format=3 uid="uid://bnjktyj6n3hmv"]

[ext_resource type="Theme" uid="uid://bntnkew0b7xww" path="res://resources/space_theme.tres" id="1_1de6g"]
[ext_resource type="Script" path="res://scripts/control_panel.gd" id="1_jec0b"]
[ext_resource type="PackedScene" uid="uid://d0yf2sv2dllbj" path="res://scenes/planet.tscn" id="2_bxoiv"]
[ext_resource type="Script" path="res://scripts/planet_info.gd" id="2_o458e"]
[ext_resource type="Texture2D" uid="uid://mf4yp8be4mk1" path="res://textures/planet_blue.png" id="3_n3f4v"]
[ext_resource type="Texture2D" uid="uid://dwy7l6cksgwgc" path="res://textures/planet_red.png" id="4_q3fxs"]
[ext_resource type="Texture2D" uid="uid://caymicx8ltd4j" path="res://textures/planet_green.png" id="5_75djm"]
[ext_resource type="Texture2D" uid="uid://1ba65vs5hkat" path="res://textures/planet_yellow.png" id="7_el1x1"]

[sub_resource type="Resource" id="Resource_tdasv"]
script = ExtResource("2_o458e")
planet_name = "Blue"
texture = ExtResource("3_n3f4v")

[sub_resource type="Resource" id="Resource_te35b"]
script = ExtResource("2_o458e")
planet_name = "Red"
texture = ExtResource("4_q3fxs")

[sub_resource type="Resource" id="Resource_wfqcu"]
script = ExtResource("2_o458e")
planet_name = "Green"
texture = ExtResource("5_75djm")

[sub_resource type="Resource" id="Resource_bj4jc"]
script = ExtResource("2_o458e")
planet_name = "yellow"
texture = ExtResource("7_el1x1")

[node name="Control_Panel" type="CanvasLayer"]
script = ExtResource("1_jec0b")
planet = ExtResource("2_bxoiv")
planets_list = Array[ExtResource("2_o458e")]([SubResource("Resource_tdasv"), SubResource("Resource_te35b"), SubResource("Resource_wfqcu")])
planets_list2 = Array[ExtResource("2_o458e")]([SubResource("Resource_bj4jc")])

[node name="Control_Panel_Container" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.5
offset_top = -149.5
offset_right = 187.5
offset_bottom = 149.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1de6g")

[node name="Control_Panel" type="Panel" parent="Control_Panel_Container"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control_Panel_Container/Control_Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Control_Panel_Container/Control_Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Control Panel"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control_Panel_Container/Control_Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Close_Button" type="Button" parent="Control_Panel_Container/Control_Panel/VBoxContainer"]
layout_mode = 2
text = "close"
